use gin requestid

--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,8 @@ server:
     read: 15
     write: 10
     idle: 5
+logrus:
+  level: debug
 databases:
   default:
     dsn: dbname=admin user=admin password=qazwsx host=127.0.0.1 pool_max_conns=10
