--- a/config/config.yml
+++ b/config/config.yml
@@ -18,3 +18,5 @@ alfabank:
 databases:
   default:
     dsn: dbname=kvell user=kvell password=qazwsx host=127.0.0.1 pool_max_conns=10
+cardstore:
+  url: http://127.0.0.1:8090
